# COMP6940-A1

./: README.md  pyproject.toml  requirements.txt
part1_taxi/: 01_ingest.ipynb  02_clean_features.ipynb  03_stats_eda_viz.ipynb
